--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -13,7 +13,7 @@ html {
 body {
   font-family: Arial, Geneva, sans-serif;
   color: white;
-  background-color: plum;
+  background-color: #0fffeb;
 }
 
 .main {
@@ -55,14 +55,14 @@ body {
   padding-bottom: 10%;
   height: 0;
   border-radius: 50%;
-  background-color: rebeccapurple;
+  background-color: #ff9ef9;
   z-index: 1;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
 }
 
-.selected {
+.lit {
   -webkit-filter: brightness(1.75);
           filter: brightness(1.75);
 }
