--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -14,6 +14,7 @@ body {
   font-family: Arial, Geneva, sans-serif;
   color: white;
   background-color: #0fffeb;
+  text-align: center;
 }
 
 .main {
@@ -26,10 +27,8 @@ body {
 }
 
 .gameboard {
-  text-align: center;
   width: 80%;
   background-color: white;
-  border: 2px solid gold;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,7 +49,6 @@ body {
 }
 
 .console {
-  border: 2px solid purple;
   width: 40%;
   padding-bottom: 10%;
   height: 0;
@@ -67,18 +65,27 @@ body {
           filter: brightness(1.75);
 }
 
-#section-green {
+#section-0 {
   background-color: #04be28;
 }
 
-#section-red {
+#section-1 {
   background-color: #fa3c1e;
 }
 
-#section-yellow {
+#section-2 {
   background-color: #fae01e;
 }
 
-#section-blue {
+#section-3 {
   background-color: #1e7afa;
+}
+
+#start {
+  width: 10rem;
+  height: 2rem;
+  margin-top: 1rem;
+  background-color: lightblue;
+  border-radius: 10px;
+  border-style: none;
 }
