--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -15,6 +15,7 @@ body {
 	font-family: Arial, Geneva, sans-serif;
 	color: white;
 	background-color:	rgba(15, 255, 235,1);
+	text-align: center;
 
 }
 
@@ -24,10 +25,10 @@ body {
 }
 
 .gameboard {
-	text-align: center;
+	// text-align: center;
 	width: 80%;
 	background-color: white;
-	border: 2px solid gold;
+	// border: 2px solid gold;
 	display: flex;
 	flex-wrap: wrap;
 	height: 0;
@@ -43,7 +44,7 @@ body {
 }
 
 .console {
-	border: 2px solid purple;
+	// border: 2px solid purple;
 	width: 40%;
 	padding-bottom: 10%;
 	height: 0;
@@ -57,17 +58,27 @@ body {
 	filter: brightness(1.75);
 }
 
-#section-green {
+#section-0 {
 	background-color: $green;
 }
-#section-red {
+#section-1 {
 	background-color: $red;
 }
-#section-yellow {
-	background-color: $yellow;
+#section-2 {
+	background-color: $yellow; 
 }
-#section-blue {
+#section-3 {
 	background-color: $blue;
+}
+
+#start {
+	width: 10rem;
+	height: 2rem;
+	margin-top: 1rem;
+	background-color: lightblue;
+	border-radius: 10px;
+	border-style: none;
+
 }
 
 
