--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -61,8 +61,9 @@ body {
 }
 
 .lit {
-  -webkit-filter: brightness(1.75);
-          filter: brightness(1.75);
+  -webkit-filter: brightness(15);
+          filter: brightness(15);
+  border: 2px solid purple;
 }
 
 #section-0 {
@@ -85,7 +86,8 @@ body {
   width: 10rem;
   height: 2rem;
   margin-top: 1rem;
-  background-color: lightblue;
+  background-color: #01665e;
+  color: lightblue;
   border-radius: 10px;
   border-style: none;
 }
