--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -65,20 +65,34 @@ body {
           filter: brightness(4);
 }
 
+.modal {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow: auto;
+  top: 0;
+}
+
 [id="0"] {
   background-color: rgba(4, 190, 40, 0.8);
+  z-index: 2;
 }
 
 [id="1"] {
   background-color: rgba(250, 60, 30, 0.8);
+  z-index: 2;
 }
 
 [id="2"] {
   background-color: rgba(250, 224, 30, 0.8);
+  z-index: 2;
 }
 
 [id="3"] {
   background-color: rgba(30, 122, 250, 0.8);
+  z-index: 2;
 }
 
 #start {
