--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -56,6 +56,16 @@ body {
 .lit {
 	filter: brightness(4);
 }
+.modal {
+	// display: none;
+	position: fixed;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.6);
+	overflow: auto;
+	top: 0;
+}
 
 [id= "0"] {
 	background-color: $green;
