--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -70,9 +70,13 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
   overflow: auto;
   top: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-game-over {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 [id="0"] {
@@ -103,4 +107,9 @@ body {
   color: lightblue;
   border-radius: 10px;
   border-style: none;
+}
+
+#score {
+  color: black;
+  text-transform: uppercase;
 }
