--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -62,22 +62,29 @@ body {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,.6);
 	overflow: auto;
 	top: 0;
+	background-color: rgba(0,0,0,.4);
+	&-game-over {
+		background-color: rgba(0,0,0,.7);
+	}	
 }
 
 [id= "0"] {
 	background-color: $green;
+	z-index: 2;
 }
 [id= "1"] {
 	background-color: $red;
+	z-index: 2;
 }
 [id= "2"] {
 	background-color: $yellow; 
+	z-index: 2;
 }
 [id= "3"] {
 	background-color: $blue;
+	z-index: 2;
 }
 
 #start {
@@ -88,6 +95,11 @@ body {
 	color:lightblue;
 	border-radius: 10px;
 	border-style: none;
+}
+#score {
+	color: black;
+	text-transform: uppercase;
+
 }
 
 
