adds game score and high score

--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -96,10 +96,9 @@ body {
 	border-radius: 10px;
 	border-style: none;
 }
-#score {
+#highScore,#userScore{
 	color: black;
 	text-transform: uppercase;
-
 }
 
 
