--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -12,18 +12,22 @@ html {
 
 body {
   font-family: Arial, Geneva, sans-serif;
-  color: white;
   background-color: #0fffeb;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .gameboard {
@@ -35,7 +39,7 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   height: 0;
-  margin-top: 10%;
+  margin-top: 2%;
   padding-bottom: 40%;
 }
 
@@ -65,9 +69,9 @@ body {
           filter: brightness(4);
 }
 
-.modal {
+.modal, .modal-game-over {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -76,6 +80,7 @@ body {
 }
 
 .modal-game-over {
+  z-index: 3;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -107,9 +112,4 @@ body {
   color: lightblue;
   border-radius: 10px;
   border-style: none;
-}
-
-#highScore, #userScore {
-  color: black;
-  text-transform: uppercase;
 }
