--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -1,6 +1,7 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  text-transform: uppercase;
 }
 
 *,
@@ -14,7 +15,6 @@ body {
   font-family: Arial, Geneva, sans-serif;
   background-color: #0fffeb;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .main {
@@ -82,6 +82,9 @@ body {
 .modal-game-over {
   z-index: 3;
   background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-weight: 900;
+  font-size: xx-large;
 }
 
 [id="0"] {
