--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -61,22 +61,32 @@ body {
           filter: brightness(7);
 }
 
-.modal, .modal-game-over {
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: fixed;
-  z-index: 3;
+  z-index: 1;
   width: 100%;
   height: 100%;
   overflow: auto;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-game-over {
-  z-index: 3;
-  background-color: rgba(0, 0, 0, 0.7);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: white;
   font-weight: 900;
   font-size: xx-large;
+}
+
+#compTurnModal {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+#gameOverModal {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 [id="0"] {
@@ -99,7 +109,7 @@ body {
   z-index: 2;
 }
 
-#start {
+button {
   width: 10rem;
   height: 2rem;
   margin-top: 1rem;
@@ -107,4 +117,5 @@ body {
   color: lightblue;
   border-radius: 10px;
   border-style: none;
+  text-transform: uppercase;
 }
