--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -57,24 +57,34 @@ body {
 // 	border: 2px solid red;
 // }
 .modal {
-	// display: none;
+	display: flex;
 	position: fixed;
-	z-index: 3;
+	z-index: 1;
 	width: 100%;
 	height: 100%;
 	overflow: auto;
 	top: 0;
-	background-color: rgba(0,0,0,.4);
+	justify-content: center;
+	
+	// background-color: rgba(0,0,0,.4);
 	// background-color: purple;
 	// border: 2px solid gold;
-	&-game-over {
-		@extend .modal;
-		z-index: 3;
-		background-color: rgba(0,0,0,.7);
+	// &-game-over {
+		// @extend .modal;
+		// z-index: 3;
+		// background-color: rgba(0,0,0,.7);
 		color: white;
 		font-weight: 900;
 		font-size: xx-large;
-	}	
+	// }	
+}
+#compTurnModal {
+	background-color: rgba(0,0,0,.4);
+	display: none;
+}
+#gameOverModal {
+	display: none;
+	background-color: rgba(0,0,0,.7);
 }
 
 [id= "0"] {
@@ -94,7 +104,7 @@ body {
 	z-index: 2;
 }
 
-#start {
+button {
 	width: 10rem;
 	height: 2rem;
 	margin-top: 1rem;
@@ -102,10 +112,12 @@ body {
 	color:lightblue;
 	border-radius: 10px;
 	border-style: none;
+	text-transform: uppercase;
+
 }
+
 // #highScore,#userScore{
 // 	// color: black;
-// 	text-transform: uppercase;
 // }
 
 
