--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -65,6 +65,7 @@ body {
 	overflow: auto;
 	top: 0;
 	justify-content: center;
+	// align-items: center;
 	
 	// background-color: rgba(0,0,0,.4);
 	// background-color: purple;
@@ -78,12 +79,17 @@ body {
 		font-size: xx-large;
 	// }	
 }
+.modal-content {
+	margin-top: 10rem;
+
+}
 #compTurnModal {
 	background-color: rgba(0,0,0,.4);
 	display: none;
 }
 #gameOverModal {
 	display: none;
+	z-index: 3;
 	background-color: rgba(0,0,0,.7);
 }
 
@@ -113,7 +119,14 @@ button {
 	border-radius: 10px;
 	border-style: none;
 	text-transform: uppercase;
+	transition: transform 0.25s ;
 
+
+}
+button:hover {
+	cursor: pointer;
+	transform:scale(1.1);
+	filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
 }
 
 // #highScore,#userScore{
