--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -18,21 +18,23 @@ body {
 }
 
 .gameboard {
-	width: 80%;
+	width: 50%;
 	background-color: white;
-	// border: 2px solid gold;
+	border: 2px solid gold;
 	display: flex;
 	flex-wrap: wrap;
 	height: 0;
-	margin-top: 2%;
-	padding-bottom: 40%;
+	// margin-top: 2%;
+	padding-bottom: 47%;
 }
 
 .game-section {
-	flex: 49%;
-	// height: 0;
-	border: 2px solid blue;
-	padding-bottom: 24.75%;
+	flex: 50%;
+	// min-width: 25%;
+
+	// height: auto;
+	// border: 2px solid blue;
+	padding-bottom: 47%;
 }
 
 .console {
@@ -81,7 +83,9 @@ body {
 	z-index: 3;
 	background-color: rgba(0,0,0,.7);
 }
-
+#gameStatus {
+	font-size: xx-large;
+}
 [id= "0"] {
 	background-color: $green;
 	z-index: 2;
@@ -109,8 +113,6 @@ button {
 	border-style: none;
 	text-transform: uppercase;
 	transition: transform 0.25s ;
-
-
 }
 button:hover {
 	cursor: pointer;
@@ -118,8 +120,6 @@ button:hover {
 	filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
 }
 
-// #highScore,#userScore{
-// 	// color: black;
-// }
+
 
 
