--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -20,21 +20,25 @@ body {
 .gameboard {
 	width: 50%;
 	background-color: white;
-	border: 2px solid gold;
+	// border: 5px solid gold;
 	display: flex;
 	flex-wrap: wrap;
 	height: 0;
 	// margin-top: 2%;
 	padding-bottom: 47%;
+	border-radius: 50%;
+	border:.5em solid purple;
 }
 
 .game-section {
-	flex: 50%;
+	flex: 49%;
+	// margin:-.01px;
 	// min-width: 25%;
 
 	// height: auto;
 	// border: 2px solid blue;
 	padding-bottom: 47%;
+	border-top-left-radius: 100%;
 }
 
 .console {
@@ -91,14 +95,18 @@ body {
 	z-index: 2;
 }
 [id= "1"] {
+	transform: scaleX(-1);
 	background-color: $red;
 	z-index: 2;
 }
 [id= "2"] {
+	transform: scaleY(-1);
 	background-color: $yellow; 
 	z-index: 2;
 }
 [id= "3"] {
+	transform: scaleY(-1) scaleX(-1);
+	// transform: scaleX(1);
 	background-color: $blue;
 	z-index: 2;
 }
