--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -37,12 +37,23 @@ body {
   border: .5em solid purple;
 }
 
+.lightBox {
+  background: red;
+  -webkit-box-shadow: 0 0 5em 1em;
+          box-shadow: 0 0 5em 1em;
+  z-index: 3;
+}
+
 .game-section {
   -webkit-box-flex: 49%;
       -ms-flex: 49%;
           flex: 49%;
   padding-bottom: 47%;
   border-top-left-radius: 100%;
+}
+
+.game-section:hover {
+  cursor: pointer;
 }
 
 .console {
@@ -58,8 +69,8 @@ body {
 }
 
 .lit {
-  -webkit-filter: brightness(7);
-          filter: brightness(7);
+  -webkit-filter: opacity(0.25);
+          filter: opacity(0.25);
 }
 
 .modal {
@@ -70,7 +81,6 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
-  overflow: auto;
   top: 0;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -82,11 +92,6 @@ body {
 
 .modal-content {
   margin-top: 10rem;
-}
-
-#compTurnModal {
-  background-color: rgba(0, 0, 0, 0.4);
-  display: none;
 }
 
 #gameOverModal {
