--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -23,32 +23,41 @@ body {
           align-items: center;
 }
 
-.gameboard {
+.game-component, .lightBox, .gameboard {
   width: 40%;
-  background-color: white;
+  background-color: royalblue;
+  border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 0;
-  padding-bottom: 34%;
-  border-radius: 50%;
-  border: .5em solid purple;
 }
 
 .lightBox {
-  background: red;
+  height: 0;
+  background: purple;
+  padding-bottom: 30%;
+}
+
+.gameboard {
   -webkit-box-shadow: 0 0 5em 1em;
           box-shadow: 0 0 5em 1em;
-  z-index: 3;
+  background-color: white;
+  width: 100%;
+  padding-bottom: 75%;
+  -webkit-filter: opacity(0.5);
+          filter: opacity(0.5);
+  height: 0;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .game-section {
   -webkit-box-flex: 49%;
       -ms-flex: 49%;
           flex: 49%;
-  padding-bottom: 42.5%;
+  padding-bottom: 37.5%;
   border-top-left-radius: 100%;
 }
 
