--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -15,27 +15,53 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	// border: 3px solid orange;
 }
-
-.gameboard {
+.game-component {
 	width: 40%;
-	background-color: white;
-	// border: 5px solid gold;
+	background-color: royalblue;
+	// padding-bottom: 34%;
+	// border: 5px solid orangered;
+	// height: 0;
+	border-radius: 50%;
 	display: flex;
 	flex-wrap: wrap;
-	height: 0;
-	// filter:brightness(.41);
-	// margin-top: 2%;
-	padding-bottom: 34%;
-	border-radius: 50%;
-	border:.5em solid purple;
+	
+	
 }
 .lightBox {
-	// @extend .gameboard;
-	background: red;
-	box-shadow: 0 0 5em 1em;
-	z-index: 3;
+	@extend .game-component;
+	// width: 100%;
+	height: 0;
+	background: purple;
+	padding-bottom: 30%;
+	// transform: scale(.8);
+	// z-index: 3;
+	// box-shadow: 0 0 5em 1em;
 }
+.gameboard {
+	@extend .game-component;
+	box-shadow: 0 0 5em 1em;
+	background-color: white;
+	width: 100%;
+	padding-bottom: 75%;
+	filter:opacity(.5);
+	height: 0;
+	transform:scale(1.1);
+	// z-index: 4;
+
+	
+	// original properties: 
+	
+	// display: flex;
+	// width: 40%;
+	// height: 0;
+	// margin-top: 2%;
+	// padding-bottom: 34%;
+	// border-radius: 50%;
+	// border:.5em solid purple;
+}
+
 .game-section {
 	flex: 49%;
 	// margin:-.01px;
@@ -43,7 +69,7 @@ body {
 
 	// height: auto;
 	// border: 2px solid blue;
-	padding-bottom: 42.5%;
+	padding-bottom: 37.5%;
 	border-top-left-radius: 100%;
 }
 .game-section:hover {
