--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -1,5 +1,5 @@
 // Colors:
-$red: rgba(250,60,30,.8);
-$blue: rgba(30,122,250,.8);
-$yellow: rgba(250,224,30,.8);
-$green: rgba(4,190,40,.8);
+$red: rgba(250,60,30,1);
+$blue: rgba(30,122,250,1);
+$yellow: rgba(250,224,30,1);
+$green: rgba(4,190,40,1);
