--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -15,11 +15,12 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin: 3em;
 	// border: 3px solid orange;
 }
 .game-component {
 	width: 40%;
-	background-color: royalblue;
+	// background-color: white;
 	// padding-bottom: 34%;
 	// border: 5px solid orangered;
 	// height: 0;
@@ -33,22 +34,25 @@ body {
 	@extend .game-component;
 	// width: 100%;
 	height: 0;
-	background: purple;
-	padding-bottom: 30%;
+	background: white;
+	padding-bottom: 31%;
 	// transform: scale(.8);
 	// z-index: 3;
-	// box-shadow: 0 0 5em 1em;
+	box-shadow:  0 0 1.5em 1.5em white;
+	// box-shadow:  0 0 40px 40px  white;
+	// box-shadow:  outset 0 0 5em 1em white;
 }
 .gameboard {
 	@extend .game-component;
-	box-shadow: 0 0 5em 1em;
-	background-color: white;
+	// box-shadow: 0 0 5em 1em;
+	background-color: none;
+	// background: red;
 	width: 100%;
-	padding-bottom: 75%;
-	filter:opacity(.5);
+	padding-bottom: 72.5%;
+	// filter:opacity(.5);
 	height: 0;
-	transform:scale(1.1);
-	// z-index: 4;
+	transform:scale(1.2);
+	z-index: 4;
 
 	
 	// original properties: 
@@ -59,7 +63,7 @@ body {
 	// margin-top: 2%;
 	// padding-bottom: 34%;
 	// border-radius: 50%;
-	// border:.5em solid purple;
+	border:.5em solid purple;
 }
 
 .game-section {
@@ -69,6 +73,7 @@ body {
 
 	// height: auto;
 	// border: 2px solid blue;
+	filter:opacity(1);
 	padding-bottom: 37.5%;
 	border-top-left-radius: 100%;
 }
@@ -128,7 +133,7 @@ body {
 }
 [id= "0"] {
 	background-color: $green;
-	z-index: 2;
+	// z-index: 2;
 }
 [id= "1"] {
 	transform: scaleX(-1);
@@ -138,7 +143,7 @@ body {
 [id= "2"] {
 	transform: scaleY(-1);
 	background-color: $yellow; 
-	z-index: 2;
+	z-index: 1;
 }
 [id= "3"] {
 	transform: scaleY(-1) scaleX(-1);
