--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -3,3 +3,4 @@ $red: rgba(250,60,30,.8);
 $blue: rgba(30,122,250,.8);
 $yellow: rgba(250,224,30,.8);
 $green: rgba(4,190,40,.8);
+$navy: rgba(34,47,120,1);
