--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -9,6 +9,7 @@ body {
 	font-family: Arial, Geneva, sans-serif;
 	background-color:	rgba(15, 255, 235,1);
 	text-align: center;
+	color: $navy;
 }
 
 .main {
@@ -28,7 +29,7 @@ body {
 	// margin-top: 2%;
 	padding-bottom: 34%;
 	border-radius: 50%;
-	border:.5em solid purple;
+	border:.5em solid $navy;
 }
 .lightBox {
 	// @extend .gameboard;
@@ -125,7 +126,7 @@ button {
 	width: 10rem;
 	height: 2rem;
 	margin-top: 1rem;
-	background-color: rgb(1,102, 94);
+	background-color: $navy;
 	color:lightblue;
 	border-radius: 10px;
 	border-style: none;
