--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -4,3 +4,4 @@ $blue: rgba(30,122,250,.8);
 $yellow: rgba(250,224,30,.8);
 $green: rgba(4,190,40,.8);
 $navy: rgba(34,47,120,1);
+$lightblue: rgb(166,214,255);
