--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -104,11 +104,8 @@ body {
 .tooltip:before {
   content: attr(data-text);
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  margin: 0 auto;
-  width: 10em;
+  margin: auto;
+  width: 300%;
   padding: 2em;
   border-radius: 1em;
   background: #222f78;
@@ -116,17 +113,11 @@ body {
   text-align: center;
   display: none;
   font-weight: 200;
-  text-transform: capitalize;
+  text-transform: none;
   font-size: 1em;
   -webkit-filter: opacity(0.8);
           filter: opacity(0.8);
-}
-
-.tooltip.left:before {
-  left: initial;
-  margin: initial;
-  right: 100%;
-  margin-right: 2em;
+  white-space: pre-line;
 }
 
 .tooltip:hover:before {
@@ -190,4 +181,12 @@ button:hover {
           transform: scale(1.1);
   -webkit-filter: drop-shadow(2px 2px 10px #ffff02) brightness(150%);
           filter: drop-shadow(2px 2px 10px #ffff02) brightness(150%);
+}
+
+.footer {
+  font-size: .7em;
+}
+
+.footer a {
+  color: #222f78;
 }
