--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -10,6 +10,7 @@ body {
 	background-color:	rgba(15, 255, 235,1);
 	text-align: center;
 	color: $navy;
+
 }
 
 .main {
@@ -90,29 +91,33 @@ body {
 .tooltip:before {
 	content: attr(data-text);
 	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	// left: 50%;
-	margin: 0 auto ;
-	width: 10em;
+	// top: 150%;
+	// transform: translateY(-50%);
+	// left: 37%;
+	margin: auto;
+	// margin-left: 35%;
+	width: 300%;
 	padding: 2em;
 	border-radius: 1em;
 	background: $navy;
+	// background: $green;
 	color:$lightblue;
+	// color: red;
 	text-align: center;
 	display:none;
 	font-weight: 200;
-	text-transform:capitalize ;
+	text-transform:none ;
 	font-size: 1em;
 	filter:opacity(.8);
-
+	white-space: pre-line;
+	// align-self: center;
 }
-.tooltip.left:before {
-	left:initial;
-	margin:initial;
-	right: 100%;
-	margin-right: 2em;
-}
+// .tooltip.left:before {
+// 	left:initial;
+// 	margin:initial;
+// 	// right: 40%;
+// 	// margin-right: 2em;
+// }
 .tooltip:hover:before {
 	display: block;
 }
@@ -162,6 +167,12 @@ button:hover {
 	filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
 }
 
-
+.footer {
+	font-size: .7em;
+	a {
+		// text-decoration: none;
+		color: $navy;
+	}
+}
 
 
