--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -11,6 +11,10 @@ body {
   color: #222f78;
 }
 
+h3 {
+  margin: .5em auto;
+}
+
 .main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,6 +40,7 @@ body {
   padding-bottom: 34%;
   border-radius: 50%;
   border: 0.5em solid #222f78;
+  margin-bottom: 1em;
 }
 
 .lightBox {
@@ -104,24 +109,27 @@ body {
 .tooltip:before {
   content: attr(data-text);
   position: absolute;
-  margin: auto;
-  width: 300%;
+  top: 10%;
+  left: -230%;
+  width: 500%;
   padding: 2em;
   border-radius: 1em;
   background: #222f78;
   color: #a6d6ff;
   text-align: center;
-  display: none;
   font-weight: 200;
   text-transform: none;
-  font-size: 1em;
-  -webkit-filter: opacity(0.8);
-          filter: opacity(0.8);
+  font-size: 1.2em;
+  -webkit-filter: opacity(0.9);
+          filter: opacity(0.9);
   white-space: pre-line;
+  opacity: 0;
+  -webkit-transition: .53s opacity;
+  transition: .53s opacity;
 }
 
 .tooltip:hover:before {
-  display: block;
+  opacity: 1;
 }
 
 #gameOverModal {
@@ -173,6 +181,8 @@ button {
   transition: -webkit-transform 0.25s;
   transition: transform 0.25s;
   transition: transform 0.25s, -webkit-transform 0.25s;
+  -webkit-filter: opacity(0.9);
+          filter: opacity(0.9);
 }
 
 button:hover {
