--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -12,7 +12,9 @@ body {
 	color: $navy;
 
 }
-
+h3 {
+	margin: .5em auto;
+}
 .main {
 	display: flex;
 	flex-direction: column;
@@ -29,6 +31,7 @@ body {
 	padding-bottom: 34%;
 	border-radius: 50%;
 	border:.5em solid $navy;
+	margin-bottom: 1em;
 }
 .lightBox {
 	// @extend .gameboard;
@@ -65,6 +68,9 @@ body {
 	filter: brightness(7);
 	// filter: opacity(.25);
 	filter: saturate(5);
+	// this will work if I set it up to be a mixin-  I can pass the color as a variable into the class
+	// box-shadow:  inset 0 0 1.5em 1.5em $color;
+
 }
 .modal {
 	display: flex;
@@ -82,44 +88,30 @@ body {
 .modal-content {
 	margin-top: 10rem;
 }
-
-// 
 .tooltip {
 	position: relative;
-	// border-bottom: 1px dashed $navy;
 }
 .tooltip:before {
 	content: attr(data-text);
 	position: absolute;
-	// top: 150%;
-	// transform: translateY(-50%);
-	// left: 37%;
-	margin: auto;
-	// margin-left: 35%;
-	width: 300%;
+	top: 10%;
+	left: -230%;
+	width: 500%;
 	padding: 2em;
 	border-radius: 1em;
 	background: $navy;
-	// background: $green;
 	color:$lightblue;
-	// color: red;
 	text-align: center;
-	display:none;
 	font-weight: 200;
 	text-transform:none ;
-	font-size: 1em;
-	filter:opacity(.8);
+	font-size: 1.2em;
+	filter:opacity(.9);
 	white-space: pre-line;
-	// align-self: center;
+	opacity: 0;
+	transition: .53s opacity;
 }
-// .tooltip.left:before {
-// 	left:initial;
-// 	margin:initial;
-// 	// right: 40%;
-// 	// margin-right: 2em;
-// }
 .tooltip:hover:before {
-	display: block;
+	opacity: 1;
 }
 #gameOverModal {
 	display: none;
@@ -160,6 +152,7 @@ button {
 	border-style: none;
 	text-transform: uppercase;
 	transition: transform 0.25s ;
+	filter:opacity(.9);
 }
 button:hover {
 	cursor: pointer;
