--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -107,12 +107,22 @@ h3 {
 	font-size: 1.2em;
 	filter:opacity(.9);
 	white-space: pre-line;
+	// display: none;
 	opacity: 0;
-	transition: .53s opacity;
+
+	transition: 1s opacity;
+	// transition: 5s display;
 }
+// .tooltip.left:before {
+// 	left: initial;
+// 	margin: initial;
+// }
+
 .tooltip:hover:before {
 	opacity: 1;
+	// display: block;
 }
+
 #gameOverModal {
 	display: none;
 	z-index: 3;
@@ -162,9 +172,11 @@ button:hover {
 
 .footer {
 	font-size: .7em;
+	margin-bottom: 10%;
 	a {
 		// text-decoration: none;
 		color: $navy;
+
 	}
 }
 
