fixes tooltip bug

--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -68,7 +68,7 @@ h3 {
   height: 0;
   border-radius: 50%;
   background-color: #ff9ef9;
-  z-index: 1;
+  z-index: 5;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -77,8 +77,10 @@ h3 {
 .lit {
   -webkit-filter: brightness(7);
           filter: brightness(7);
-  -webkit-filter: saturate(5);
-          filter: saturate(5);
+  -webkit-filter: opacity(0.25);
+          filter: opacity(0.25);
+  -webkit-filter: saturate(10);
+          filter: saturate(10);
 }
 
 .modal {
@@ -104,10 +106,13 @@ h3 {
 
 .tooltip {
   position: relative;
+  display: block;
+  font-size: .9em;
+  margin: 1em;
 }
 
-.tooltip:before {
-  content: attr(data-text);
+.tooltip .tooltip-text {
+  visibility: hidden;
   position: absolute;
   top: 10%;
   left: -230%;
@@ -119,17 +124,14 @@ h3 {
   text-align: center;
   font-weight: 200;
   text-transform: none;
-  font-size: 1.2em;
+  font-size: 1em;
   -webkit-filter: opacity(0.9);
           filter: opacity(0.9);
   white-space: pre-line;
-  opacity: 0;
-  -webkit-transition: 1s opacity;
-  transition: 1s opacity;
 }
 
-.tooltip:hover:before {
-  opacity: 1;
+.tooltip:hover .tooltip-text {
+  visibility: visible;
 }
 
 #gameOverModal {
