--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -24,7 +24,6 @@ h3 {
 .gameboard {
 	width: 40%;
 	background-color: white;
-	// border: 5px solid gold;
 	display: flex;
 	flex-wrap: wrap;
 	height: 0;
@@ -41,18 +40,12 @@ h3 {
 }
 .game-section {
 	flex: 49%;
-	// margin:-.01px;
-	// min-width: 25%;
-
-	// height: auto;
-	// border: 2px solid blue;
 	padding-bottom: 42.5%;
 	border-top-left-radius: 100%;
+	&:hover {
+		cursor: pointer;
+	}
 }
-.game-section:hover {
-	cursor: pointer;
-}
-
 .console {
 	// border: 2px solid purple;
 	width: 40%;
@@ -60,14 +53,14 @@ h3 {
 	height: 0;
 	border-radius: 50%;
 	background-color: rgba(255, 158, 249,1);
-	z-index: 1;
+	z-index: 5;
 	align-self: center;
 }
 
 .lit {
 	filter: brightness(7);
-	// filter: opacity(.25);
-	filter: saturate(5);
+	filter: opacity(.25);
+	filter: saturate(10);
 	// this will work if I set it up to be a mixin-  I can pass the color as a variable into the class
 	// box-shadow:  inset 0 0 1.5em 1.5em $color;
 
@@ -78,7 +71,6 @@ h3 {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	// overflow: auto;
 	top: 0;
 	justify-content: center;
 	color: white;
@@ -90,39 +82,30 @@ h3 {
 }
 .tooltip {
 	position: relative;
+	display: block;
+	font-size:.9em;
+	margin: 1em;
+	& .tooltip-text {
+		visibility: hidden;
+		position: absolute;
+		top: 10%;
+		left: -230%;
+		width: 500%;
+		padding: 2em;
+		border-radius: 1em;
+		background: $navy;
+		color:$lightblue;
+		text-align: center;
+		font-weight: 200;
+		text-transform:none ;
+		font-size: 1em;
+		filter:opacity(.9);
+		white-space: pre-line;
+	}
+	&:hover .tooltip-text {
+		visibility: visible;
+	}
 }
-.tooltip:before {
-	content: attr(data-text);
-	position: absolute;
-	top: 10%;
-	left: -230%;
-	width: 500%;
-	padding: 2em;
-	border-radius: 1em;
-	background: $navy;
-	color:$lightblue;
-	text-align: center;
-	font-weight: 200;
-	text-transform:none ;
-	font-size: 1.2em;
-	filter:opacity(.9);
-	white-space: pre-line;
-	// display: none;
-	opacity: 0;
-
-	transition: 1s opacity;
-	// transition: 5s display;
-}
-// .tooltip.left:before {
-// 	left: initial;
-// 	margin: initial;
-// }
-
-.tooltip:hover:before {
-	opacity: 1;
-	// display: block;
-}
-
 #gameOverModal {
 	display: none;
 	z-index: 3;
@@ -163,20 +146,17 @@ button {
 	text-transform: uppercase;
 	transition: transform 0.25s ;
 	filter:opacity(.9);
+	&:hover {
+		cursor: pointer;
+		transform:scale(1.1);
+		filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
+	}
 }
-button:hover {
-	cursor: pointer;
-	transform:scale(1.1);
-	filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
-}
-
 .footer {
 	font-size: .7em;
 	margin-bottom: 10%;
 	a {
-		// text-decoration: none;
 		color: $navy;
-
 	}
 }
 
