--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -1,7 +1,8 @@
 // Colors:
-$red: rgba(250,60,30,.8);
-$blue: rgba(30,122,250,.8);
-$yellow: rgba(250,224,30,.8);
-$green: rgba(4,190,40,.8);
+$red: rgba(250,60,30,.9);
+$blue: rgba(30,122,250,.9);
+$yellow: rgba(250,224,30,.9);
+$green: rgba(4,190,40,.9);
 $navy: rgba(34,47,120,1);
 $lightblue: rgb(166,214,255);
+$shadow: rgba(0,0,0,.5);
