--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -6,15 +6,20 @@ html {
 }
 
 body {
-	font-family: Arial, Geneva, sans-serif;
-	background-color:	rgba(15, 255, 235,1);
+	font-family: 'Roboto', sans-serif;
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	// background-color: rgba(255, 242, 158, 1);// alternate background color
+	background-color: rgba(213, 240, 205, 1);
 	text-align: center;
 	color: $navy;
+	letter-spacing: .16em;
 
 }
+
 h3 {
 	margin: .5em auto;
 }
+
 .main {
 	display: flex;
 	flex-direction: column;
@@ -23,48 +28,27 @@ h3 {
 
 .gameboard {
 	width: 40%;
-	background-color: white;
+	background-color: $navy;
 	display: flex;
 	flex-wrap: wrap;
 	height: 0;
 	padding-bottom: 34%;
 	border-radius: 50%;
-	border:.5em solid $navy;
+	border: 1em solid $navy;
 	margin-bottom: 1em;
+	box-shadow: .1em .1em 1em .25em white;
 }
-.lightBox {
-	// @extend .gameboard;
-	background: red;
-	box-shadow: 0 0 5em 1em;
-	z-index: 3;
-}
+
 .game-section {
 	flex: 49%;
 	padding-bottom: 42.5%;
 	border-top-left-radius: 100%;
+	box-shadow: inset .1em .1em 1em .25em $shadow;
 	&:hover {
 		cursor: pointer;
 	}
 }
-.console {
-	// border: 2px solid purple;
-	width: 40%;
-	padding-bottom: 10%;
-	height: 0;
-	border-radius: 50%;
-	background-color: rgba(255, 158, 249,1);
-	z-index: 5;
-	align-self: center;
-}
 
-.lit {
-	filter: brightness(7);
-	filter: opacity(.25);
-	filter: saturate(10);
-	// this will work if I set it up to be a mixin-  I can pass the color as a variable into the class
-	// box-shadow:  inset 0 0 1.5em 1.5em $color;
-
-}
 .modal {
 	display: flex;
 	position: fixed;
@@ -76,63 +60,80 @@ h3 {
 	color: white;
 	font-weight: 900;
 	font-size: xx-large;
+	& button {
+		// align-items: flex-start;
+		width: 10em;
+		padding: 1em;
+		padding-bottom: 2em;
+		// color:red;
+	}
 }
+
 .modal-content {
 	margin-top: 10rem;
 }
+
 .tooltip {
 	position: relative;
 	display: block;
-	font-size:.9em;
+	font-size: .9em;
 	margin: 1em;
+
 	& .tooltip-text {
 		visibility: hidden;
 		position: absolute;
-		top: 10%;
+		bottom: 10%;
 		left: -230%;
 		width: 500%;
 		padding: 2em;
 		border-radius: 1em;
 		background: $navy;
-		color:$lightblue;
+		color: $lightblue;
 		text-align: center;
 		font-weight: 200;
-		text-transform:none ;
 		font-size: 1em;
-		filter:opacity(.9);
+		filter: opacity(.95);
 		white-space: pre-line;
 	}
+
 	&:hover .tooltip-text {
 		visibility: visible;
 	}
 }
+
 #gameOverModal {
 	display: none;
 	z-index: 3;
-	background-color: rgba(0,0,0,.7);
+	background-color: rgba(0, 0, 0, .7);
 }
+
 #gameStatus {
 	font-size: xx-large;
 }
+
 // Game sections: 
-[id= "0"] {
+[id="0"] {
 	background-color: $green;
-	z-index: 2;
 }
-[id= "1"] {
+
+[id="1"] {
 	transform: scaleX(-1);
 	background-color: $red;
-	z-index: 2;
 }
-[id= "2"] {
+
+[id="2"] {
 	transform: scaleY(-1);
-	background-color: $yellow; 
-	z-index: 2;
+	background-color: $yellow;
 }
-[id= "3"] {
+
+[id="3"] {
 	transform: scaleY(-1) scaleX(-1);
 	background-color: $blue;
-	z-index: 2;
+}
+
+.lit {
+	filter: brightness(3);
+
 }
 
 button {
@@ -140,24 +141,29 @@ button {
 	height: 2rem;
 	margin-top: 1rem;
 	background-color: $navy;
-	color:$lightblue;
+	color: $lightblue;
 	border-radius: 10px;
 	border-style: none;
-	text-transform: uppercase;
-	transition: transform 0.25s ;
-	filter:opacity(.9);
+	text-transform: uppercase;	
+	font-family: 'Roboto', sans-serif;
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	letter-spacing: .05em;
+	font-size: 1em;
+	transition: transform 0.25s;
+	filter: opacity(.9);
+
 	&:hover {
 		cursor: pointer;
-		transform:scale(1.1);
-		filter: drop-shadow(2px 2px 10px rgba(255, 255, 2,  1)) brightness(150%);
+		transform: scale(1.1);
+		filter: drop-shadow(2px 2px 10px rgba(255, 255, 2, 1)) brightness(150%);
 	}
 }
+
 .footer {
 	font-size: .7em;
 	margin-bottom: 10%;
+
 	a {
 		color: $navy;
 	}
 }
-
-
