--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -40,21 +40,23 @@ h3 {
       flex-wrap: wrap;
   height: 0;
   padding-bottom: 34%;
-  border-radius: 50%;
-  border: 1em solid #222f78;
   margin-bottom: 1em;
-  -webkit-box-shadow: .1em .1em 1em .25em white;
-          box-shadow: .1em .1em 1em .25em white;
+  border-radius: 50%;
+  border: .25em solid transparent;
+  -webkit-box-shadow: 0.1em 0.1em 1em #222f78;
+          box-shadow: 0.1em 0.1em 1em #222f78;
+  outline: 0.2em solid #222f78;
+  outline-offset: .12em;
 }
 
 .game-section {
-  -webkit-box-flex: 49%;
-      -ms-flex: 49%;
-          flex: 49%;
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
   padding-bottom: 42.5%;
   border-top-left-radius: 100%;
-  -webkit-box-shadow: inset 0.1em 0.1em 1em 0.25em rgba(0, 0, 0, 0.5);
-          box-shadow: inset 0.1em 0.1em 1em 0.25em rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0.1em 0.1em 1em 0.25em rgba(0, 0, 0, 0.75);
+          box-shadow: inset 0.1em 0.1em 1em 0.25em rgba(0, 0, 0, 0.75);
 }
 
 .game-section:hover {
@@ -99,8 +101,8 @@ h3 {
   visibility: hidden;
   position: absolute;
   bottom: 10%;
-  left: -230%;
-  width: 500%;
+  left: -250%;
+  width: 550%;
   padding: 2em;
   border-radius: 1em;
   background: #222f78;
@@ -120,7 +122,7 @@ h3 {
 #gameOverModal {
   display: none;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 #gameStatus {
@@ -180,8 +182,8 @@ button:hover {
   cursor: pointer;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
-  -webkit-filter: drop-shadow(2px 2px 10px #ffff02) brightness(150%);
-          filter: drop-shadow(2px 2px 10px #ffff02) brightness(150%);
+  -webkit-filter: drop-shadow(2px 2px 10px rgba(250, 224, 30, 0.9)) brightness(150%);
+          filter: drop-shadow(2px 2px 10px rgba(250, 224, 30, 0.9)) brightness(150%);
 }
 
 .footer {
