--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -13,7 +13,6 @@ body {
 	text-align: center;
 	color: $navy;
 	letter-spacing: .16em;
-
 }
 
 h3 {
@@ -33,26 +32,16 @@ h3 {
 	flex-wrap: wrap;
 	height: 0;
 	padding-bottom: 34%;
-	border-radius: 50%;
-	border: 1em solid $navy;
 	margin-bottom: 1em;
-	box-shadow: .1em .1em 1em .25em white;
-	// &::before {
-		// border-radius: 100%;
-		// content:'';
-		// // background-image: radial-gradient(white, black);
-		// background-image: linear-gradient(red, black 100%);
-		// top: 1px;
-		// bottom: 1px;
-		// right: 1px;
-		// left: 1px;
-		// position: absolute;
-		// // padding: -10em;
-	// }
+	border-radius: 50%;
+	border: .25em solid transparent;
+	box-shadow: .1em .1em 1em  $navy;
+	outline: .2em solid $navy;
+	outline-offset: .12em;
 }
 
 .game-section {
-	flex: 49%;
+	flex: 50%;
 	padding-bottom: 42.5%;
 	border-top-left-radius: 100%;
 	box-shadow: inset .1em .1em 1em .25em $shadow;
@@ -73,11 +62,9 @@ h3 {
 	font-weight: 900;
 	font-size: xx-large;
 	& button {
-		// align-items: flex-start;
 		width: 10em;
 		padding: 1em;
 		padding-bottom: 2em;
-		// color:red;
 	}
 }
 
@@ -95,8 +82,8 @@ h3 {
 		visibility: hidden;
 		position: absolute;
 		bottom: 10%;
-		left: -230%;
-		width: 500%;
+		left: -250%;
+		width: 550%;
 		padding: 2em;
 		border-radius: 1em;
 		background: $navy;
@@ -116,7 +103,7 @@ h3 {
 #gameOverModal {
 	display: none;
 	z-index: 3;
-	background-color: rgba(0, 0, 0, .7);
+	background-color: $shadow;
 }
 
 #gameStatus {
@@ -168,7 +155,7 @@ button {
 	&:hover {
 		cursor: pointer;
 		transform: scale(1.1);
-		filter: drop-shadow(2px 2px 10px rgba(255, 255, 2, 1)) brightness(150%);
+		filter: drop-shadow(2px 2px 10px $yellow) brightness(150%);
 	}
 }
 
