--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -76,6 +76,7 @@ h3 {
 	display: block;
 	font-size: .9em;
 	margin: 1em;
+	text-decoration: underline;
 
 	& .tooltip-text {
 		visibility: hidden;
