fixes timing of userClick eventListener

--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -6,3 +6,4 @@ $green: rgba(4,190,40,.9);
 $navy: rgba(34,47,120,1);
 $lightblue: rgb(166,214,255);
 $shadow: rgba(0,0,0,.75);
+$background-color: rgba(213, 240, 205, 1);
