--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -8,8 +8,7 @@ html {
 body {
 	font-family: 'Roboto', sans-serif;
 	font-family: 'ZCOOL QingKe HuangYou', sans-serif;
-	// background-color: rgba(255, 242, 158, 1);// alternate background color
-	background-color: rgba(213, 240, 205, 1);
+	background-image: radial-gradient( white, $background-color);
 	text-align: center;
 	color: $navy;
 	letter-spacing: .16em;
