--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -4,6 +4,7 @@ $blue: rgba(30,122,250,.9);
 $yellow: rgba(250,224,30,.9);
 $green: rgba(4,190,40,.9);
 $navy: rgba(34,47,120,1);
+$lightnavy: rgba(34,47,120,.5);
 $lightblue: rgb(166,214,255);
 $shadow: rgba(0,0,0,.75);
 $background-color: rgba(213, 240, 205, 1);
