--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -228,7 +228,7 @@ span {
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 1.5em;
-  background-color: rgba(34, 47, 120, 0.5);
+  background-color: #222f78;
 }
 
 .slider:before {
@@ -236,7 +236,7 @@ span {
   content: '';
   height: 1em;
   width: 1em;
-  left: .5em;
+  left: 1.5em;
   bottom: .25em;
   -webkit-transition: .4s;
   transition: .4s;
@@ -245,12 +245,12 @@ span {
 }
 
 input:checked + .slider {
-  background-color: #222f78;
+  background-color: rgba(34, 47, 120, 0.5);
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(1em);
-          transform: translateX(1em);
+  -webkit-transform: translateX(-1em);
+          transform: translateX(-1em);
 }
 
 @media screen and (max-width: 700px) {
