--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -253,6 +253,17 @@ input:checked + .slider:before {
           transform: translateX(-1em);
 }
 
+#backButton {
+  position: fixed;
+  left: 1em;
+  top: .5em;
+  font-size: .8em;
+}
+
+#backButton a {
+  color: #222f78;
+}
+
 @media screen and (max-width: 700px) {
   button {
     width: 7em;
